--- a/HT/logout.html
+++ b/HT/logout.html
@@ -4,9 +4,10 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="description" content="saude, fitness">
+    <meta name="keywords" content="saude, fitness">
     <meta name="author" content="Cynthia Oka">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
 
     <title>Health Track</title>
 
@@ -18,7 +19,7 @@
 
 </head>
 <body>
-    <div id="container-fluid">
+
         <hearder>
             <div id="logo">
                 <img src="images/logo_HT.png" alt="Logo Health Track" width="400px">
@@ -26,10 +27,10 @@
             <h1 id="frase">Acompanhe seu estilo de vida e crie hábitos saudáveis</h1>
         </hearder>
         <hr>
-            <h1 id="frase-logout">Você saiu da sua conta. Até a próxima!</h1>
-            <p id="log-again">Logar novamente? <a href="login.html"> Fazer login.</a></p>     
-    </div>
-
+        <div class="container-fluid text-center">
+            <h2 id="frase-logout">Você saiu da sua conta. Até a próxima!</h2>
+            <p id="lead">Logar novamente? <a href="login.html"> Fazer login.</a></p>     
+        </div>
     <script src="plugins/bootstrap/js/jquery-migrate-1.4.1.min.js"></script>
     <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
 </body>
