Ultimos ajustes HTML+CSS

--- a/HT/cadastro.html
+++ b/HT/cadastro.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="textlabel">Selecione seu genero</label><br>
+                    <label class="textlabel">Selecione seu gênero</label><br>
                     <div id="escolhe-genero">
                         <input type="radio" id="masculino" name="genero" value="masculino" checked="checked">
                             <label for="masculino">Masculino</label><br>
@@ -72,9 +72,9 @@
                     <input id="senha_confirma_Input" name="senha_confirma" type="password" class="form-control" maxlength="8" required>
                 </div>
             </fieldset>
-            <div id="centraliza-button">
+            <div class="centraliza-button">
                 <!--<input type="submit" class="btn btn-success" value="Finalizar Cadastro" />-->
-                <a href="dashboard.html"><button type="button" class="btn btn-primary btn-lg">CADASTRAR</button></a>
+                <a href="dashboard.html"><button type="button" class="btn btn-outline-primary btn-lg">CADASTRAR</button></a>
             </div>
         </form>
     </div>
