--- a/HT/alimentos_edit.html
+++ b/HT/alimentos_edit.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="dashboard.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="cadastro.html">Perfil</a>
+                <a class="nav-link" href="perfil.html">Perfil</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="alimentos_home.html">Alimentação</a>
