--- a/HT/alimentos_home.html
+++ b/HT/alimentos_home.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="dashboard.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="cadastro.html">Perfil</a>
+                <a class="nav-link" href="perfil.html">Perfil</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="alimentos_home.html">Alimentação</a>
@@ -72,7 +72,7 @@
                 <tr>
                     <th scope="row">22/05/2020</th>
                     <td>Café da manhã</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
+                    <td>Crepioca com banana e café puro.</td>
                     <td>350</td>
                     <td><a class="icon-edit" href="alimentos_edit.html"><i class="far fa-edit"></i></a></td>
                     <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
@@ -80,7 +80,7 @@
                 <tr>
                     <th scope="row">22/05/2020</th>
                     <td>Almoço</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
+                    <td>Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
                     <td>1200</td>
                     <td><a class="icon-edit" href="alimentos_edit.html"><i class="far fa-edit"></i></a></td>
                     <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
