--- a/HT/exercicios_home.html
+++ b/HT/exercicios_home.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="dashboard.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="cadastro.html">Perfil</a>
+                <a class="nav-link" href="perfil.html">Perfil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="alimentos_home.html">Alimentação</a>
@@ -72,7 +72,7 @@
                 <tr>
                     <th scope="row">22/05/2020</th>
                     <td>Corrida</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem iusto velit iste odit voluptatibus natus, voluptate, ad reprehenderit laborum nemo repellat repudiandae quos, earum eaque iure dignissimos fugiat atque ut./td>
+                    <td>Corrida intervalada durante 30min - distância 3km.</td>
                     <td>350</td>
                     <td><a class="icon-edit" href="exercicios_edit.html"><i class="far fa-edit"></i></a></td>
                     <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
@@ -96,7 +96,7 @@
                 <tr>
                     <th scope="row">22/05/2020</th>
                     <td>Pilates</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus nam obcaecati consequatur magni ab! Ut magnam delectus, consequuntur quaerat voluptate, commodi veniam nam distinctio neque, voluptatum natus non voluptatibus!</td>
+                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia debitis, sint sed unde tempore quia facilis ut a pariatur corporis dignissimos amet aspernatur molestiae nisi nulla aperiam ab expedita officia.</td>
                     <td>350</td>
                     <td><a class="icon-edit" href="exercicios_edit.html"><i class="far fa-edit"></i></a></td>
                     <td><a class="icon-delete" href="#"><i class="far fa-trash-alt"></i></a></td>
