Add funcionalidades dashboard

--- a/HT/dashboard.html
+++ b/HT/dashboard.html
@@ -66,7 +66,10 @@
         <p class="lead">O Health Track é o seu maior aliado para consquistar um estilo de vida saudável. Adicione dados das suas refeições, seu peso, as atividades físicas realizadas, suas medidas corporais e até mesmo sua pressão arterial.</p> 
         <p class="lead">A melhor maneira de adquirir hábitos saudáveis e verificar sua evolução pessoal.</p>
     </div>
-    
+
+    <div class="container-fluid padding">
+        <p class="lead text-center">Olá Allana, aqui estão alguns dos seus resultados:</p>
+    </div>
 
     <div class="container-fluid padding">
         <div class="row peso text-center">
@@ -83,20 +86,25 @@
 
     <div class="container-fluid padding">
         <div class="row text-center padding">
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <i class="fas fa-running"></i>
-            <h3>ATIVIDADE FÍSICA</h3>
-            <p class="lead">120 minuitos de exercícios em Maio.</p>
+          <div class="col-md-3">
+            <i class="far fa-clock"></i>
+            <h3>IDADE</h3>
+            <p class="lead">Você está com 28 anos de idade.</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <i class="fas fa-utensils"></i>
-            <h3>CALORIAS</h3>
-            <p class="lead">Média de 1520 calorias ingeridas por dia.</p>
+          <div class="col-md-3">
+            <i class="fas fa-ruler"></i>
+            <h3>IMC</h3>
+            <p class="lead">IMC igual a 20.1 - dentro do valor saudável.</p>
           </div>
-          <div class="col-sm-12 col-md-4">
+          <div class="col-md-3">
+            <i class="fas fa-balance-scale"></i>
+            <h3>PESO</h3>
+            <p class="lead">Última pesagem em 24/05 valor de 55kg.</p>
+          </div>
+          <div class="col-md-3">
             <i class="fas fa-heartbeat"></i>
-            <h3>PRESSÃO</h3>
-            <p class="lead">Sua pressão está dentro de um valor saudável.</p>
+            <h3>PRESSÃO ARTERIAL</h3>
+            <p class="lead">Último dado em 24/05 com valor de 14:6.</p>
           </div>
         </div>
     </div>
