--- a/HT/pressao_edit.html
+++ b/HT/pressao_edit.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/x-icon" href="images/mini_logo.ico">
     
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css">
     
     </head>
@@ -75,7 +75,8 @@
         <a href="pressao_home.html"><button type="button" class="btn btn-primary btn-lg">ADICIONAR PRESSÃO ARTERIAL</button></a>
     </div>
     </div>
-    <script src="plugins/bootstrap/js/jquery-3.5.1.min.js"></script>
-    <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
