--- a/HT/login.html
+++ b/HT/login.html
@@ -36,7 +36,7 @@
                             <div class="form-group">
                                 <input id="senha_acesso" type="password" class="form-control" placeholder="Senha" maxlength="8" required>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-lg" onclick="validar_login()">LOGIN</button>
+                            <button type="submit" id="btn_login" class="btn btn-primary btn-lg">LOGIN</button>
                         </form>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
             </div>
         </footer>
         
-        <script src="js/validacoes.js"></script>
+        <script src="js/validarLogin.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
