Formulário com campos reduzidos
Formulário com campos reduzidos

--- a/HT/cadastro.html
+++ b/HT/cadastro.html
@@ -32,11 +32,11 @@
                 <legend>Informações Pessoais</legend>
                 <div class="form-group">
                     <label class="textlabel" for="nomeInput">Nome Completo</label>
-                    <input id="nomeInput" name="nome" type="text" autofocus="autofocus" class="form-control" maxlength="70" required>
+                    <input id="nomeInput" name="nome" type="text" autofocus="autofocus" class="form-control form-grande " maxlength="70" required>
                 </div>
                 <div class="form-group">
                     <label class="textlabel" for="dataInput">Data de nascimento</label>
-                    <input id="dataInput" name="data" type="date" class="form-control" required>
+                    <input id="dataInput" name="data" type="date" class="form-control form-peq" required>
                 </div>
 
                 <div class="form-group">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="form-group">
                     <label class="textlabel" for="alturaInput">Altura (em centímetros)</label>
-                    <input id="alturaInput" name="altura" type="number" min = "100" max = "250" class="form-control" required>
+                    <input id="alturaInput" name="altura" type="number" min = "100" max = "250" class="form-control form-peq" required>
                 </div>
 
             </br></br></br>
@@ -60,16 +60,16 @@
                 <legend>Informações de Acesso</legend>
                 <div class="form-group">
                     <label class="textlabel" for="emailInput">E-mail</label>
-                    <input id="emailInput" name="email" type="email" class="form-control" required>
+                    <input id="emailInput" name="email" type="email" class="form-control form-grande" required>
                     <small id="emailHelp" class="form-text text-muted">Nunca iremos compartilhar seu e-mail com ninguém.</small>
                 </div>
                 <div class="form-group">
                     <label class="textlabel" for="senhaInput">Senha (sua senha deve possuir 8 caracteres com letras e números)</label>
-                    <input id="senhaInput" name="senha" type="password" class="form-control" maxlength="8" required>
+                    <input id="senhaInput" name="senha" type="password" class="form-control form-grande" maxlength="8" required>
                 </div>
                 <div class="form-group">
                     <label class="textlabel" for="senha_confirma_Input">Digite sua senha novamente para confirmação.</label>
-                    <input id="senha_confirma_Input" name="senha_confirma" type="password" class="form-control" maxlength="8" required>
+                    <input id="senha_confirma_Input" name="senha_confirma" type="password" class="form-control form-grande" maxlength="8" required>
                 </div>
             <div class="centraliza-button">
                 <button type="button" id="btn_cadastrar" class="btn btn-outline-primary btn-lg">CADASTRAR</button>
