--- a/HT/cadastro.html
+++ b/HT/cadastro.html
@@ -26,60 +26,55 @@
         <h1 id="frase">Acompanhe seu estilo de vida e crie hábitos saudáveis</h1>
     </hearder>
     <hr>
-    <div class="container-fluid padding">
+    <div class="container-fluid padding2">
+        <form class="main-form padding2" method="post" id="formulario_cadastro">
+                <legend>Informações Pessoais</legend>
+                <div class="form-group">
+                    <label class="textlabel" for="nomeInput">Nome Completo</label>
+                    <input id="nomeInput" name="nome" type="text" autofocus="autofocus" class="form-control" maxlength="70" required>
+                </div>
+                <div class="form-group">
+                    <label class="textlabel" for="dataInput">Data de nascimento</label>
+                    <input id="dataInput" name="data" type="date" class="form-control form-peq" required>
+                </div>
 
-        <div class="row justify-content-center">
-            <div class="col-10">
-                <form class="main-form padding" method="post" id="formulario_cadastro">
-                        <legend>Informações Pessoais</legend>
-                        <div class="form-group">
-                            <label class="textlabel" for="nomeInput">Nome Completo</label>
-                            <input id="nomeInput" name="nome" type="text" autofocus="autofocus" class="form-control form-grande " maxlength="70" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="textlabel" for="dataInput">Data de nascimento</label>
-                            <input id="dataInput" name="data" type="date" class="form-control form-peq" required>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="textlabel">Selecione seu gênero</label><br>
-                            <div id="escolhe-genero">
-                                <input type="radio" id="masculino" name="genero" value="masculino" checked="checked">
-                                    <label for="masculino">Masculino</label><br>
-                                <input type="radio" id="feminino" name="genero" value="feminino">
-                                    <label for="feminino">Feminino</label><br>
-                                <input type="radio" id="outro" name="genero" value="outro">
-                                    <label for="outro">Outro</label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="textlabel" for="alturaInput">Altura (em centímetros)</label>
-                            <input id="alturaInput" name="altura" type="number" min = "100" max = "250" class="form-control form-peq" required>
-                        </div>
-
-                    </br></br></br>
-
-                        <legend>Informações de Acesso</legend>
-                        <div class="form-group">
-                            <label class="textlabel" for="emailInput">E-mail</label>
-                            <input id="emailInput" name="email" type="email" class="form-control form-grande" required>
-                            <small id="emailHelp" class="form-text text-muted">Nunca iremos compartilhar seu e-mail com ninguém.</small>
-                        </div>
-                        <div class="form-group">
-                            <label class="textlabel" for="senhaInput">Senha (sua senha deve possuir 8 caracteres com letras e números)</label>
-                            <input id="senhaInput" name="senha" type="password" class="form-control form-grande" maxlength="8" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="textlabel" for="senha_confirma_Input">Digite sua senha novamente para confirmação.</label>
-                            <input id="senha_confirma_Input" name="senha_confirma" type="password" class="form-control form-grande" maxlength="8" required>
-                        </div>
-                    </br>
-                    <div class="centraliza-button">
-                        <button type="button" id="btn_cadastrar" class="btn btn-outline-primary btn-lg">CADASTRAR</button>
+                <div class="form-group">
+                    <label class="textlabel">Selecione seu gênero</label><br>
+                    <div id="escolhe-genero">
+                        <input type="radio" id="masculino" name="genero" value="masculino" checked="checked">
+                            <label for="masculino">Masculino</label><br>
+                        <input type="radio" id="feminino" name="genero" value="feminino">
+                            <label for="feminino">Feminino</label><br>
+                        <input type="radio" id="outro" name="genero" value="outro">
+                            <label for="outro">Outro</label>
                     </div>
-                </form>
+                </div>
+                <div class="form-group">
+                    <label class="textlabel" for="alturaInput">Altura (em centímetros)</label>
+                    <input id="alturaInput" name="altura" type="number" min = "100" max = "250" class="form-control form-peq" required>
+                </div>
+
+            </br></br>
+
+                <legend>Informações de Acesso</legend>
+                <div class="form-group">
+                    <label class="textlabel" for="emailInput">E-mail</label>
+                    <input id="emailInput" name="email" type="email" class="form-control" required>
+                    <small id="emailHelp" class="form-text text-muted">Nunca iremos compartilhar seu e-mail com ninguém.</small>
+                </div>
+                <div class="form-group">
+                    <label class="textlabel" for="senhaInput">Senha (sua senha deve possuir 8 caracteres com letras e números)</label>
+                    <input id="senhaInput" name="senha" type="password" class="form-control" maxlength="8" required>
+                </div>
+                <div class="form-group">
+                    <label class="textlabel" for="senha_confirma_Input">Digite sua senha novamente para confirmação.</label>
+                    <input id="senha_confirma_Input" name="senha_confirma" type="password" class="form-control" maxlength="8" required>
+                </div>
+            </br>
+            <div class="centraliza-button">
+                <button type="button" id="btn_cadastrar" class="btn btn-outline-primary btn-lg">CADASTRAR</button>
             </div>
-        </div>
+        </form>
     </div>
         <br><br>
 
