Inputs de login e form ajustados

--- a/HT/cadastro.html
+++ b/HT/cadastro.html
@@ -26,8 +26,14 @@
         <h1 id="frase">Acompanhe seu estilo de vida e crie hábitos saudáveis</h1>
     </hearder>
     <hr>
-    <div class="container-fluid padding2">
-        <form class="main-form padding2" method="post" id="formulario_cadastro">
+    <div class="container-fluid padding">
+
+
+        <div class="row justify-content-center">
+            <div class="col-lg-8 padding">
+
+
+        <form class="main-form padding" method="post" id="formulario_cadastro">
                 <legend>Informações Pessoais</legend>
                 <div class="form-group">
                     <label class="textlabel" for="nomeInput">Nome Completo</label>
@@ -75,6 +81,10 @@
                 <button type="button" id="btn_cadastrar" class="btn btn-outline-primary btn-lg">CADASTRAR</button>
             </div>
         </form>
+
+</div>
+</div>
+
     </div>
         <br><br>
 
