--- a/HT/login.html
+++ b/HT/login.html
@@ -29,7 +29,7 @@
             <div class="container-fluid padding">
                 <div class="row justify-content-center">
                     <div class="col-lg-6 text-center padding">
-                        <form class="form-login" method="POST" id="login">
+                        <form class="form-login" name="form_login" method="POST" id="login">
                             <div class="form-group">
                                 <input id="email_acesso" type="text" autofocus="autofocus" class="form-control" placeholder="Email" required>
                             </div>
