--- a/HT/alimentos_edit.html
+++ b/HT/alimentos_edit.html
@@ -42,9 +42,6 @@
                 <a class="nav-link" href="exercicios_home.html">Exercícios Físicos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="medidas_home.html">Medidas Corporais</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="peso_home.html">Peso</a>
             </li>
             <li class="nav-item">
@@ -82,10 +79,11 @@
         </fieldset>
     </form>
     <div class="add-ref">
-        <a href="alimentos_home.html"><button type="button" class="btn btn-primary btn-lg">ADICIONAR REFEIÇÃO</button></a>
+        <button type="button" class="btn btn-primary btn-lg" id="btn_alimentos">ADICIONAR REFEIÇÃO</button>
     </div>
     </div>
     
+    <script src="js/validarAlimento.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
