--- a/HT/peso_edit.html
+++ b/HT/peso_edit.html
@@ -64,12 +64,19 @@
                     <label class="textlabel">Peso (Kg)</label>
                     <input id="pesoInput" name="peso" type="number" class="form-control" required>
                 </div>
+                <div class="form-group">
+                    <label class="textlabel" for="dataInput">Data da pesagem</label>
+                    <input id="dataInput" name="data" type="date" class="form-control form-peq" required>
+                </div>
             </fieldset>
         </form>
         <div class="add-ref">
-            <a href="peso_home.html"><button type="button" class="btn btn-primary btn-lg">ADICIONAR PESO</button></a>
+            <button type="button" class="btn btn-primary btn-lg" 
+                id ="btn_peso">ADICIONAR PESO</button>
         </div>
     </div>
+
+    <script src="js/validarPeso.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
