--- a/HT/exercicios_edit.html
+++ b/HT/exercicios_edit.html
@@ -78,13 +78,18 @@
                 <label class="textlabel">Calorias gastas</label>
                 <input id="calAtvInput" name="calAtv" type="number" class="form-control" required>
             </div>
+            <div class="form-group">
+                <label class="textlabel" for="dataInput">Data da pressão</label>
+                <input id="dataInput" name="data" type="date" class="form-control form-peq" required>
+            </div>
         </fieldset>
     </form>
     <div class="add-ref">
-        <a href="exercicios_home.html"><button type="button" class="btn btn-primary btn-lg">ADICIONAR EXERCÍCIO</button></a>
+        <button type="button" class="btn btn-primary btn-lg" id="btn_exercicio">ADICIONAR EXERCÍCIO</button>
     </div>
 </div>
 
+    <script src="js/validarExercicio.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
